# isa

./: .gitignore  BOUNDARIES.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  MANUAL.md  MEMO_ISA_TO_IOS.md  PAL.md  PROTOCOL.md  README.md  _sync.py  arbiter.py  ares_concurrent_review.md  brain.py  demo_end_to_end.py  dream_insight_sender.py  dream_to_jiak.py  gateway.py  goal.py  hephaestus_multi_device_review.md  hermes_adapter.py  isa  isa-agent.service  isa-gateway.service  isa.py  isa_agent_processor.py  isa_channel.py  isa_chat.py  isa_chat.sh  isa_chat_v3.py  isa_client.py  isa_listen.py  isa_session.py  kronos_one_year_review.md  narrative_analysis.md  offline.py  project_agents.py  pyproject.toml  schemas.py  seven-gods-blessing-20260621.md  (+7 more)
client/: index.html  manifest.json  sw.js
legacy/: isa_cron_poller.py
references/: reconstruct-phase2-protocol.md
tests/: test_brain.py  test_signal_pipeline.py
