[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "isa"
version = "0.8.0"
description = "ISA — 语义共振通信平台。万亿Agent的通用互联层。内置jika认知引擎。"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jieba>=0.42",
    "websockets>=12.0",
]
license = {text = "MIT"}
authors = [
    {name = "ISA Team"}
]
keywords = ["agent", "communication", "semantic-wave", "decentralized"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/isa/isa"
Repository = "https://github.com/isa/isa"

[project.scripts]
isa = "isa:main"

[tool.setuptools]
py-modules = ["isa", "isa_client", "isa_channel", "isa_listen"]
