[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "isa"
version = "0.8.0"
description = "ISA Project — 人工认知架构。三层: 神经纤维(ISA Layer)+大脑皮层(Brain Layer)+记忆固化系统(Δ胶囊 Layer)。非通信平台——是人工大脑。"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jieba>=0.42",
    "websockets>=12.0",
]
license = {text = "MIT"}
authors = [
    {name = "ISA Team"}
]
keywords = ["agent", "communication", "semantic-wave", "decentralized"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/zcs366/isa"
Repository = "https://github.com/zcs366/isa"

[project.scripts]
isa = "isa:main"

[tool.setuptools]
py-modules = ["isa", "isa_client", "isa_channel", "isa_listen", "brain", "goal", "arbiter", "offline", "gateway"]
